@@ -5,8 +5,8 @@
 # ==============================================================================
 # 回环
 # ==============================================================================
-127.0.0.1         localhost.localdomain         localhost
-::1               localhost.localdomain         localhost
+127.0.0.1         localhost.localdomain localhost
+::1               localhost.localdomain localhost
 # ==============================================================================
 
 # ==============================================================================
@@ -18,9 +18,6 @@
 # 公司
 # ==============================================================================
 121.69.10.26      vpn
-192.168.80.119    ppcsrv
-192.168.80.24     x86srv
-192.168.80.71     gitlab
 # ==============================================================================
 
 # ==============================================================================
